# TupleList

./: README.md  pyproject.toml
src/TupleList_virumoru/: __init__.py
